--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 
 </head>
-<body class="max-w-screen-2xl mx-auto ">
+<body class="max-w-screen-2xl mx-auto">
     <nav class="sticky top-0 bg-[#ffffff98] py-5 w-full z-50">
             <div class="navbar">
                 <div class="navbar-start">
@@ -41,7 +41,7 @@
             </div>
     </nav>
     <main class="">
-      <div id="main-container flex flex-col justify-center items-center gap-5">
+      <div id="main-container" class="flex flex-col justify-center items-center gap-5">
         <div class="newkhali">
             <div class="hero bg-base-200 min-h-screen border-2 border-gray-300">
                 <div class="hero-content flex-col lg:flex-row gap-8">
